# HServir

./: CMakeLists.txt  README.md
html/: 404.html  index.html
include/: server.h
src/: server.c
